<resources>
    <string name="app_name">mobilki3</string>

    <!-- main -->
    <string name="main_header_text">SUPER MEGA APP</string>
    <string name="main_haffman_btn">Haffman algo</string>
    <string name="main_wheat_btn">Wheat database</string>
    <string name="main_contacts_btn">Contacts 2.0</string>
    <string name="main_geoService_btn">Geo service 3000</string>
    <string name="main_credits_btn">THE Author</string>
    <string name="main_help_btn">Help</string>

    <string name="return_btn">Return</string>

    <!-- haffman -->
    <string name="home_text">Haffman algo</string>
    <string name="input_text_help">Enter some text</string>
    <string name="button_file_text">File</string>
    <string name="button_hash_text">Hash</string>
    <string name="button_save_text">Save</string>
    <string name="button_load_last_result">Load last result</string>
    <string name="button_read_file">Read file</string>
    <string name="no_user_input">You should write some text</string>

    <!-- wheat -->
    <string name="db_header_text">Database manager</string>
    <string name="db_add_button">Add record</string>
    <string name="db_elem_year_header_text">Year</string>
    <string name="db_elem_weight_header_text">Weight</string>
    <string name="db_elem_price_header_text">Price</string>
    <string name="db_elem_dell_button">Dell</string>

    <string name="db_add_menu_header_text">Adding record</string>
    <string name="db_add_menu_year_text">Enter year</string>
    <string name="db_add_menu_weight_text">Enter weight</string>
    <string name="db_add_menu_save_button">Save record</string>
    <string name="db_add_menu_return_button">Return</string>
    <string name="db_best_record_header_text">Best records (>25m tons)</string>
    <string name="db_header_line_avg">Avg price: </string>

    <!-- contacts -->
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="contacts_table_name">All names:</string>
    <string name="contacts_need_table_name">Need names:</string>

    <!-- geo service -->
    <string name="title_activity_Map">Geo service</string>
    <string name="geo_title">Geo service 3000</string>

    <!-- credits -->
    <string name="credits_title">THE Author</string>
    <string name="author_name">Ігор Бутенко</string>
    <string name="author_group">ттп-41</string>
    <string name="author_course">4й курс</string>


</resources>