<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6288ff"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_btn"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/credits_title"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/author_img"
        android:layout_height="400sp"
        android:layout_width="match_parent"
        android:src="@drawable/author_image"/>

    <LinearLayout
        android:layout_below="@+id/author_img"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50sp">

        <TextView
            android:id="@+id/author_name"
            android:text="@string/author_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="200sp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/author_group"
            android:text="@string/author_group"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="100sp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/author_course"
            android:text="@string/author_course"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="100sp"
            android:layout_height="match_parent"/>

    </LinearLayout>


</RelativeLayout>